--- a/RejestrOsobProjekt/Views/Home/Details.cshtml
+++ b/RejestrOsobProjekt/Views/Home/Details.cshtml
@@ -1,15 +1,29 @@
 ﻿@model RejestrOsobProjekt.Models.Human
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Human</h4>
-    <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+
+            @if (Model.Image != null)
+            {
+                string imageBase64 = Convert.ToBase64String(Model.Image);
+                string imageSrc3 = string.Format("data:image/jpg;base64,{0}", imageBase64);
+                <img src="@imageSrc3" width="200" height="200" />
+            }
+            @*@Html.DisplayFor(modelItem => item.Image)*@
+
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -24,6 +38,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GenderId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Gender.Name)
         </dd>
 
         <dt>
@@ -61,6 +83,5 @@
     </dl>
 </div>
 <p>
-
-    @Html.ActionLink("Back to List", "Missing")
+    @Html.ActionLink("Powrót", "Index")
 </p>
