--- a/RejestrOsobProjekt/Views/Home/Missing.cshtml
+++ b/RejestrOsobProjekt/Views/Home/Missing.cshtml
@@ -4,68 +4,52 @@
     ViewBag.Title = "Zaginieni";
 }
 
-<h2>Zaginieni</h2>
+<h2>Lista osób zaginionych</h2>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Gender.Name)
+        </th>
 
-@if (Model.Count() == 0)
-{
-    <h3>
-        There are no customers!
-    </h3>
-}
-else
-{
+        <th></th>
+    </tr>
 
-    <table class="table table-bordered table-hover">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateoFBirth)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Place)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th></th>
-        </tr>
-
-
-        @foreach (var item in Model)
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @if (item.Image != null)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DateoFBirth)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Place)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedDate)
-                </td>
-                <td>
-
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })
-                </td>
-            </tr>
+            string imageBase64 = Convert.ToBase64String(item.Image);
+            string imageSrc3 = string.Format("data:image/jpg;base64,{0}", imageBase64);
+            <img src="@imageSrc3" width="80" height="80" />
         }
+        @*@Html.DisplayFor(modelItem => item.Image)*@
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Gender.Name)
+    </td>
+    <td>
 
-    </table>
-}
+        @Html.ActionLink("Details", "Details", new { id = item.Id })
+
+    </td>
+</tr>
+    }
+
+</table>
