--- a/RejestrOsobProjekt/Views/Human/Details.cshtml
+++ b/RejestrOsobProjekt/Views/Human/Details.cshtml
@@ -2,14 +2,32 @@
 
 @{
     ViewBag.Title = "Details";
+    if (Session["UserName"] == null) { Response.Redirect("~/Account/Login", false); }
+    else
+       if ((Session["UserName"].ToString() == "NotRegister")) { Response.Redirect("~/Account/Login", false); };
+
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
-    <h4>Human</h4>
-    <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+
+        <dd>
+
+            @if (Model.Image != null)
+            {
+                string imageBase64 = Convert.ToBase64String(Model.Image);
+                string imageSrc3 = string.Format("data:image/jpg;base64,{0}", imageBase64);
+                <img src="@imageSrc3" width="200" height="200" />
+            }
+            @*@Html.DisplayFor(modelItem => item.Image)*@
+
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -24,6 +42,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.LastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GenderId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Gender.Name)
         </dd>
 
         <dt>
@@ -61,6 +87,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Wróc do listy", "Index")
 </p>
+
+
