--- a/RejestrOsobProjekt/Views/Human/Edit.cshtml
+++ b/RejestrOsobProjekt/Views/Human/Edit.cshtml
@@ -1,14 +1,15 @@
 ﻿@model RejestrOsobProjekt.ViewModel.HumanFormViewModel
 
+
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edycja";
     if (Session["UserName"] == null) { Response.Redirect("~/Account/Login", false); }
     else
-     if ((Session["UserName"].ToString() == "NotRegister")) { Response.Redirect("~/Account/Login", false); };
+      if ((Session["UserName"].ToString() == "NotRegister")) { Response.Redirect("~/Account/Login", false); };
 
 }
 
-<h2>Utwórz</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -18,6 +19,8 @@
         <h4>Human</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.human.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.human.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -38,14 +41,23 @@
             @Html.LabelFor(model => model.human.DateoFBirth, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.human.DateoFBirth, new { htmlAttributes = new { @class = "form-control" } })
+
                 @Html.ValidationMessageFor(model => model.human.DateoFBirth, "", new { @class = "text-danger" })
             </div>
         </div>
 
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.human.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.human.GenderId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.human.GenderId, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
         <div class="form-group">
             @Html.LabelFor(model => model.human.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.human.GenderId, new SelectList(Model.genders, "Id", "Name"),"Select Gender", new {  @class = "form-control" } )
+                @Html.DropDownListFor(model => model.human.GenderId, new SelectList(Model.genders, "Id", "Name"), "Select Gender", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.human.GenderId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,6 +78,22 @@
             </div>
         </div>
 
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.human.CreatedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.human.CreatedDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.human.CreatedDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.human.whichUser, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.human.whichUser, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.human.whichUser, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
         <div class="form-group">
             @Html.LabelFor(model => model.human.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -77,7 +105,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </div>
     </div>
@@ -86,4 +114,3 @@
 <div>
     @Html.ActionLink("Wróc do listy", "Index")
 </div>
-
