--- a/RejestrOsobProjekt/Views/Human/Index.cshtml
+++ b/RejestrOsobProjekt/Views/Human/Index.cshtml
@@ -1,19 +1,23 @@
 ﻿@model IEnumerable<RejestrOsobProjekt.Models.Human>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Twoja lista";
+    if (Session["UserName"] == null) { Response.Redirect("~/Account/Login", false); } else 
+    if ((Session["UserName"].ToString() == "NotRegister")  ) { Response.Redirect("~/Account/Login", false); };
+
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { @class = "btn btn-primary" })
+
 </p>
 
-@if (Model.Count() == 0)
+@if (Model == null || Model?.Count() == 0)
 {
     <h3>
-        There are no customers!
+        Nie masz żadnych osób wprowadzonych do bazy
     </h3>
 }
 else
@@ -22,30 +26,33 @@ else
     <table class="table table-bordered table-hover">
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateoFBirth)
+                @Html.DisplayNameFor(model => model.Gender.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Place)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
+
             <th></th>
         </tr>
-
 
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @if (item.Image != null)
+                    {
+                        string imageBase64 = Convert.ToBase64String(item.Image);
+                        string imageSrc3 = string.Format("data:image/jpg;base64,{0}", imageBase64);
+                        <img src="@imageSrc3" width="80" height="80" />
+                    }
+                    @*@Html.DisplayFor(modelItem => item.Image)*@
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
@@ -53,24 +60,19 @@ else
                     @Html.DisplayFor(modelItem => item.LastName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DateoFBirth)
+                    @Html.DisplayFor(modelItem => item.Gender.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Place)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedDate)
-                </td>
-                <td>
+
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+
                 </td>
             </tr>
         }
 
     </table>
+
+
 }
