--- a/RejestrOsobProjekt/Views/Shared/_Layout.cshtml
+++ b/RejestrOsobProjekt/Views/Shared/_Layout.cshtml
@@ -16,25 +16,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Strona główna", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Zaginieni", "Missing", "Home")</li>
                     @if (Session["UserName"] != null)
                     {
                         if (Session["UserName"].ToString() == "User")
                         {
+                            <li>@Html.ActionLink("Zaginieni", "Missing", "Home")</li>
                             <li>@Html.ActionLink("Dodaj", "Create", "Human")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
+                            <li>@Html.ActionLink("Wyloguj", "Logout", "Account")</li>
+                        }
+                        else if (Session["UserName"].ToString() == "Administrator")
+                        {
+                            <li> @Html.ActionLink("Zaginieni", "Index", "Human") </li>
+                            <li>@Html.ActionLink("Panel", "Index", "Admin")</li>
+                            <li>@Html.ActionLink("Wyloguj", "Logout", "Account")</li>
+                        }
+                        else if (Session["UserName"].ToString() == "NotRegister")
+                        {
+                            <li>@Html.ActionLink("Zaginieni", "Missing", "Home")</li>
                             <li>@Html.ActionLink("Wyloguj", "Logout", "Account")</li>
                         }
                     }
                     else
+
                     {
-                        <li>@Html.ActionLink("Register", "Register", "Account")</li>
-                        <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                        <li> @Html.ActionLink("Zaginieni", "Missing", "Home") </li>
+                        <li> @Html.ActionLink("Register", "Register", "Account") </li>
+                        <li> @Html.ActionLink("Login", "Login", "Account") </li>
                     }
 
 
