--- a/RejestrOsobProjekt/Views/Home/Missing.cshtml
+++ b/RejestrOsobProjekt/Views/Home/Missing.cshtml
@@ -17,7 +17,8 @@
             @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Gender.Name)
+            @*@Html.DisplayNameFor(model => model.Gender.Name)*@
+            @Html.ActionLink("Płeć", "Missing", new { sortOrder = ViewBag.NameSortParm })
         </th>
 
         <th></th>
